--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -20,9 +20,15 @@ env:
 jobs:
   terraform-plan:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: infrastructure
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: hashicorp/setup-terraform@v3
+
       - name: terraform init
         run: |
           terraform init \
@@ -31,6 +37,7 @@ jobs:
             -backend-config="endpoint=$BUCKET_ENDPOINT" \
             -backend-config="access_key=$BUCKET_ACCESS_KEY_ID" \
             -backend-config="secret_key=$BUCKET_SECRET_ACCESS_KEY"
+            
       - name: terraform plan
         run: |
           terraform plan -out=tfplan
