--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
 env:
-  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   TF_VAR_HOME_IP: ${{ secrets.HOME_IP }}
   BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
   BUCKET_KEY: ${{ secrets.BUCKET_KEY }}
@@ -16,18 +16,18 @@ env:
   BUCKET_ACCESS_KEY_ID: ${{ secrets.BUCKET_ACCESS_KEY_ID }}
   BUCKET_SECRET_ACCESS_KEY: ${{ secrets.BUCKET_SECRET_ACCESS_KEY }}
 
-  
 jobs:
   terraform-plan:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/drewpypro/kube-aws-istio:latest
     defaults:
       run:
         working-directory: infrastructure
 
     steps:
-      - uses: actions/checkout@v4
-      
-      - uses: ghcr.io/drewpypro/kube-aws-istio:latest
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
       - name: Verify DigitalOcean Spaces access with AWS CLI
         run: |
@@ -35,15 +35,15 @@ jobs:
           aws --endpoint-url https://${BUCKET_ENDPOINT} s3api list-objects --bucket ${BUCKET_NAME} || \
           (echo "❌ Bucket validation failed. Check credentials or bucket path." && exit 1)
 
-      - name: terraform init
+      - name: Terraform Init
         run: |
           terraform init \
-            -backend-config="bucket=$BUCKET_NAME" \
-            -backend-config="key=$BUCKET_KEY" \
-            -backend-config="endpoint=$BUCKET_ENDPOINT" \
-            -backend-config="access_key=$BUCKET_ACCESS_KEY_ID" \
-            -backend-config="secret_key=$BUCKET_SECRET_ACCESS_KEY"
-            
-      - name: terraform plan
+            -backend-config="bucket=${BUCKET_NAME}" \
+            -backend-config="key=${BUCKET_KEY}" \
+            -backend-config="endpoint=${BUCKET_ENDPOINT}" \
+            -backend-config="access_key=${BUCKET_ACCESS_KEY_ID}" \
+            -backend-config="secret_key=${BUCKET_SECRET_ACCESS_KEY}"
+
+      - name: Terraform Plan
         run: |
           terraform plan -out=tfplan
