--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
 env:
-  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   TF_VAR_HOME_IP: ${{ secrets.HOME_IP }}
   BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
   BUCKET_KEY: ${{ secrets.BUCKET_KEY }}
@@ -17,7 +17,7 @@ env:
   BUCKET_SECRET_ACCESS_KEY: ${{ secrets.BUCKET_SECRET_ACCESS_KEY }}
 
 jobs:
-  terraform-plan:
+  terraform-apply:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/drewpypro/kube-aws-istio:latest
@@ -26,11 +26,18 @@ jobs:
         working-directory: infrastructure
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      - uses: hashicorp/setup-terraform@v3
+      - name: Verify Backend
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.BUCKET_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.BUCKET_SECRET_ACCESS_KEY }}
+        run: |
+          aws --endpoint-url ${BUCKET_ENDPOINT} s3api head-object --bucket ${BUCKET_NAME} --key test/poop.txt || \
+          (echo "❌ Backend validation failed. Check credentials or filepath." && exit 1)
 
-      - name: terraform init
+      - name: Terraform Init
         run: |
           terraform init \
             -backend-config="bucket=$BUCKET_NAME" \
@@ -39,10 +46,10 @@ jobs:
             -backend-config="access_key=$BUCKET_ACCESS_KEY_ID" \
             -backend-config="secret_key=$BUCKET_SECRET_ACCESS_KEY"
 
-      - name: terraform plan
+      - name: Terraform Plan
         run: |
           terraform plan -out=tfplan
 
-      - name: terraform apply
+      - name: Terraform Apply
         run: |
           terraform apply -input=false tfplan
