--- a/infrastructure/policies/palo_access.yaml
+++ b/infrastructure/policies/palo_access.yaml
@@ -19,8 +19,8 @@ requests:
       vpc_id: $TEST_VPC
       region: "us-west-2"
       security_group_ids:
-      - $PALO_VM_SG_ID
-      ips: ["192.168.1.100/32"]
+      - sg-07d2dd5a8acd63263
+      ips: 
     protocol: tcp
     port: 443
     appid: ssl
@@ -39,8 +39,8 @@ requests:
       vpc_id: $TEST_VPC
       region: "us-west-2"
       security_group_ids:
-      - $PALO_VM_SG_ID
-      ips: ["192.168.1.100/32"]
+      - sg-07d2dd5a8acd63263
+      ips: 
     protocol: tcp
     port: 22
     appid: ssl
@@ -59,22 +59,22 @@ requests:
       vpc_id: $TEST_VPC
       region: "us-west-2"
       security_group_ids:
-      - $PALO_VM_SG_ID
-      ips: ["192.168.1.100/32"]
+      - sg-07d2dd5a8acd63263
+      ips: 
     protocol: any
     port: any
     appid: ssl
     url:  
 
   - business_justification: >
-      Allow ICMP access from home. 
+      Allow egress access from palo. 
     source:
       account_id: $TEST_ACCOUNT
       vpc_id: $TEST_VPC
       region: "us-west-2"
       security_group_ids:
-      - $PALO_VM_SG_ID
-      ips: ["192.168.1.100/32"]
+      - sg-07d2dd5a8acd63263
+      ips: 
     destination:
       account_id: 
       vpc_id: 
