--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -10,6 +10,8 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   TF_VAR_HOME_IP: ${{ secrets.HOME_IP }}
+  TF_VAR_palo_username: ${{ secrets.PALO_USERNAME }}
+  TF_VAR_palo_password: ${{ secrets.PALO_PASSWORD }}
   BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
   BUCKET_KEY: ${{ secrets.BUCKET_KEY }}
   BUCKET_ENDPOINT: ${{ secrets.BUCKET_ENDPOINT }}
