--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -46,7 +46,7 @@ jobs:
             --group-id "sg-0b5d6e2811145808d" \
             --protocol tcp \
             --port "443" \
-            --cidr "${IP}/32"
+            --cidr "${IP}/32" > /dev/null
           
       - name: Terraform Init
         run: |
