--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -43,7 +43,9 @@ jobs:
           echo "Runner public IP: $IP"
           sed -i "s|\\\$GIT_IP|$IP/32|g" policies/palo_access.yaml
           aws ec2 authorize-security-group-ingress \
+            --region us-west-2 \
             --group-id "sg-0b5d6e2811145808d" \
+            --description "automated from git workflow" \
             --protocol tcp \
             --port "443" \
             --cidr "${IP}/32" > /dev/null
