--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -48,6 +48,7 @@ jobs:
           aws ec2 authorize-security-group-ingress \
             --region us-west-2 \
             --group-id "sg-0b5d6e2811145808d" \
+            --description "automated from git workflow" \
             --protocol tcp \
             --port "443" \
             --cidr "${IP}/32" > /dev/null
