--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -48,10 +48,10 @@ jobs:
           aws ec2 authorize-security-group-ingress \
             --region us-west-2 \
             --group-id "sg-0b5d6e2811145808d" \
-            --description "automated from git workflow" \
             --protocol tcp \
             --port "443" \
-            --cidr "${IP}/32" > /dev/null
+            --cidr "${IP}/32"
+            --description "automated from git workflow" > /dev/null
           
       - name: Terraform Init
         run: |
