--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -44,7 +44,6 @@ jobs:
           sed -i "s|\\\$HOME_IP|${{ secrets.HOME_IP }}|g" policies/palo_access.yaml
           IP=$(curl -s ifconfig.me)
           echo "Runner public IP: $IP"
-          sed -i "s|\\\$GIT_IP|$IP/32|g" policies/palo_access.yaml
           aws ec2 authorize-security-group-ingress \
             --region us-west-2 \
             --group-id "sg-0b5d6e2811145808d" \
@@ -64,3 +63,18 @@ jobs:
       - name: Terraform Plan
         run: |
           terraform plan -out=tfplan
+
+      - name: Cleanup SG rule
+        if: always()
+        run: |
+          if [[ -n "$IP" ]]; then
+            echo "Revoking IP: $IP"
+            aws ec2 revoke-security-group-ingress \
+              --region us-west-2 \
+              --group-id "sg-0b5d6e2811145808d" \
+              --protocol tcp \
+              --port "443" \
+              --cidr "${IP}/32" || echo "⚠️ Failed to revoke IP, possibly already removed."
+          else
+            echo "⚠️ IP variable not found. Skipping revoke."
+          fi
