--- a/infrastructure/policies/palo_access.yaml
+++ b/infrastructure/policies/palo_access.yaml
@@ -85,3 +85,45 @@ requests:
     port: any
     appid: ssl
     url:  
+  
+  - business_justification: >
+      EC2 instance needs HTTPS access to thirdparty endpoint.
+    source:
+      account_id: 
+      vpc_id: 
+      region: 
+      security_group_ids:
+        - "sg-0b7029dc87dbcb848"
+      ips:
+    destination:
+      account_id: 
+      vpc_id: 
+      region: 
+      security_group_ids:
+        - "sg-01057cb19af0373d7"
+      ips: ["100.64.0.198/32"]
+    protocol: tcp
+    port: 443
+    appid: ssl
+    url_category: api.datadoghq.com
+    enable_palo_inspection: true
+
+  - business_justification: >
+      EC2 needs to connect to aws service vpc-endpoints via PrivateLink.
+    source:
+      account_id: 
+      vpc_id: 
+      region: 
+      security_group_ids:
+        - "sg-0b7029dc87dbcb848"
+    destination:
+      account_id:
+      vpc_id: 
+      region:
+      security_group_ids:
+        - "sg-0dfca87f31291ec64"
+      ips:
+    protocol: tcp
+    port: 443
+    appid: ssl
+    host: ec2.us-west-2.amazonaws.com
