--- a/infrastructure/policies/palo_access.yaml
+++ b/infrastructure/policies/palo_access.yaml
@@ -94,7 +94,7 @@ requests:
       region: 
       security_group_ids:
         - "sg-0b7029dc87dbcb848"
-      ips:
+      ips: ["192.168.1.18/32"]
     destination:
       account_id: 
       vpc_id: 
