--- a/infrastructure/policies/palo_access copy.yaml
+++ b/infrastructure/policies/palo_access copy.yaml
@@ -25,6 +25,7 @@ requests:
     port: 443
     appid: ssl
     url:  
+	    # This request should create an aws-sg ingress rule on sg-0b5d6e2811145808d using cidr_ipv4 only. 
 
   - business_justification: >
       Allow SSH access from home. 
@@ -45,6 +46,7 @@ requests:
     port: 22
     appid: ssl
     url:  
+	    # This request should create an aws-sg ingress rule on sg-0b5d6e2811145808d using cidr_ipv4 only. 
 
   - business_justification: >
       Allow ICMP access from home. 
@@ -65,6 +67,7 @@ requests:
     port: any
     appid: ssl
     url:  
+	    # This request should create an aws-sg ingress rule on sg-0b5d6e2811145808d using cidr_ipv4 only. 
 
   - business_justification: >
       Allow egress access from palo. 
@@ -85,6 +88,7 @@ requests:
     port: any
     appid: ssl
     url:  
+      # This request should create an aws-sg egress rule on sg-0b5d6e2811145808d using cidr_ipv4 only. 
   
   - business_justification: >
       EC2 instance needs HTTPS access to thirdparty endpoint.
@@ -107,6 +111,9 @@ requests:
     appid: ssl
     url_category: api.datadoghq.com
     enable_palo_inspection: true
+	    # This request should create an aws-sg egress rule on sg-0b7029dc87dbcb848 using referenced_security_group_id. 
+	    # This request should also create a palo alto rule using source IP to destination IP
+	    # This request finally creates an aws-sg ingress rule on sg-01057cb19af0373d7 using referenced_security_group_id. 
 
   - business_justification: >
       EC2 needs to connect to aws service vpc-endpoints via PrivateLink.
@@ -127,3 +134,5 @@ requests:
     port: 443
     appid: ssl
     host: ec2.us-west-2.amazonaws.com
+	    # This request should create an aws-sg egress rule on sg-0b7029dc87dbcb848 using referenced_security_group_id. 
+	    # This request finally creates an aws-sg ingress rule on sg-0dfca87f31291ec64 using referenced_security_group_id.
