--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -45,7 +45,7 @@ jobs:
             --region us-west-2 \
             --group-id "sg-0b5d6e2811145808d" \
             --protocol tcp \
-            --port "443" \
+            --port "22-443" \
             --cidr "${IP}/32" > /dev/null
           
       - name: Terraform Init
