--- a/policies/us-west-2/rules.yaml
+++ b/policies/us-west-2/rules.yaml
@@ -20,12 +20,11 @@ requests:
       region: "us-west-2"
       security_group_ids:
       - sg-0b5d6e2811145808d
-      ips: 
+      ips: []
     protocol: tcp
     port: 443
     appid: ssl
     url:  
-	    # This request should create an aws-sg ingress rule on sg-0b5d6e2811145808d using cidr_ipv4 only. 
 
   - business_justification: >
       Allow SSH access from home. 
@@ -41,12 +40,11 @@ requests:
       region: "us-west-2"
       security_group_ids:
       - sg-0b5d6e2811145808d
-      ips: 
+      ips: []
     protocol: tcp
     port: 22
     appid: ssl
     url:  
-	    # This request should create an aws-sg ingress rule on sg-0b5d6e2811145808d using cidr_ipv4 only. 
 
   - business_justification: >
       Allow ICMP access from home. 
@@ -62,12 +60,11 @@ requests:
       region: "us-west-2"
       security_group_ids:
       - sg-0b5d6e2811145808d
-      ips: 
+      ips: []
     protocol: any
     port: any
     appid: ssl
     url:  
-	    # This request should create an aws-sg ingress rule on sg-0b5d6e2811145808d using cidr_ipv4 only. 
 
   - business_justification: >
       Allow egress access from palo. 
@@ -77,7 +74,7 @@ requests:
       region: "us-west-2"
       security_group_ids:
       - sg-0b5d6e2811145808d
-      ips: 
+      ips: []
     destination:
       account_id: 
       vpc_id: 
@@ -88,7 +85,6 @@ requests:
     port: any
     appid: ssl
     url:  
-      # This request should create an aws-sg egress rule on sg-0b5d6e2811145808d using cidr_ipv4 only. 
   
   - business_justification: >
       EC2 instance needs HTTPS access to thirdparty endpoint.
@@ -110,10 +106,9 @@ requests:
     port: 443
     appid: ssl
     url_category: api.datadoghq.com
+    thirdPartyID: 123456
+    thirdPartyName: DataDog
     enable_palo_inspection: true
-	    # This request should create an aws-sg egress rule on sg-0b7029dc87dbcb848 using referenced_security_group_id. 
-	    # This request should also create a palo alto rule using source IP to destination IP
-	    # This request finally creates an aws-sg ingress rule on sg-01057cb19af0373d7 using referenced_security_group_id. 
 
   - business_justification: >
       EC2 needs to connect to aws service vpc-endpoints via PrivateLink.
@@ -123,16 +118,15 @@ requests:
       region: 
       security_group_ids:
         - "sg-0b7029dc87dbcb848"
+      ips: []
     destination:
       account_id:
       vpc_id: 
       region:
       security_group_ids:
         - "sg-0dfca87f31291ec64"
-      ips:
+      ips: []
     protocol: tcp
     port: 443
     appid: ssl
     host: ec2.us-west-2.amazonaws.com
-	    # This request should create an aws-sg egress rule on sg-0b7029dc87dbcb848 using referenced_security_group_id. 
-	    # This request finally creates an aws-sg ingress rule on sg-0dfca87f31291ec64 using referenced_security_group_id.
