--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Debug: Dump issue context
+      - name: Debug Dump issue context
         run: echo "${{ toJson(github.event.issue) }}"
 
       - name: Append issue body to correct file
