--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -17,21 +17,23 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Append issue body to correct file
-        working-directory: ${{ github.workspace }}
         run: |
           LABELS=$(jq -r '.issue.labels[].name' "$GITHUB_EVENT_PATH")
 
           if echo "$LABELS" | grep -q 'sg-request'; then
-            FILE=policies/us-west-2/sgs.yaml
+            FILE="${{ github.workspace }}/policies/us-west-2/sgs.yaml"
           elif echo "$LABELS" | grep -q 'access-request'; then
-            FILE=policies/us-west-2/rules.yaml
+            FILE="${{ github.workspace }}/policies/us-west-2/rules.yaml"
           else
             echo "❌ No recognized label found on issue. Exiting."
             exit 1
           fi
 
           echo "FILE=$FILE" >> $GITHUB_ENV
-          
+
+          mkdir -p "$(dirname "$FILE")"
+          touch "$FILE"
+
           echo "" >> "$FILE"
           echo "# From issue #$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")" >> "$FILE"
           jq -r '.issue.body' "$GITHUB_EVENT_PATH" >> "$FILE"
