--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Append SG request to correct file
         run: |
           FILE="${{ steps.filepath.outputs.target_file }}"
-          ISSUE_BODY=$(jq -r '.issue.body' "$GITHUB_EVENT_PATH")
+          ISSUE_BODY=$(jq -r '.issue.body' "$GITHUB_EVENT_PATH" | sed '/^### SG Request YAML$/d')
           ISSUE_NUMBER=$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")
 
           if [ ! -f "$FILE" ]; then
