--- a/.github/workflows/yaml_handler.yaml
+++ b/.github/workflows/yaml_handler.yaml
@@ -25,11 +25,11 @@ jobs:
           sudo apt-get install -y dos2unix
           npm install -g ajv-cli prettier
           pip install yamllint
-          
+
       - name: Fix and prettify YAML Files (dry run)
         run: |
           find infrastructure/policies -name '*.yaml' -exec dos2unix {} \;
-          prettier --check infrastructure/policies/**/*.yaml
+          prettier --write infrastructure/policies/**/*.yaml
           yamllint -c .yamllint infrastructure/policies --format github
 
       - name: Validate against Schema (access requests)
