--- a/.github/workflows/yaml_handler.yaml
+++ b/.github/workflows/yaml_handler.yaml
@@ -34,14 +34,14 @@ jobs:
 
       - name: Validate against Schema (access requests)
         run: |
-          ajv validate \
-            -s schemas/access-request-schema.json \
-            -d infrastructure/policies/**/rules.yaml \
-            --strict=false --errors=text
+          for file in infrastructure/policies/**/rules.yaml; do
+            echo "Validating $file"
+            ajv validate -s schemas/access-request-schema.json -d "$file" --strict=false --errors=text
+          done
 
       - name: Validate against Schema (sg requests)
         run: |
-          ajv validate \
-            -s schemas/sg-request-schema.json \
-            -d infrastructure/policies/**/sgs.yaml \
-            --strict=false --errors=text
+          for file in infrastructure/policies/**/sgs.yaml; do
+            echo "Validating $file"
+            ajv validate -s schemas/sg-request-schema.json -d "$file" --strict=false --errors=text
+          done
