--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -7,6 +7,7 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   TF_VAR_HOME_IP: ${{ secrets.HOME_IP }}
+  TF_VAR_ALTERNATE_SOURCE: ${{ secrets.ALTERNATE_SOURCE }}
   TF_VAR_palo_username: ${{ secrets.PALO_USERNAME }}
   TF_VAR_palo_password: ${{ secrets.PALO_PASSWORD }}
   BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
@@ -39,6 +40,7 @@ jobs:
       - name: Inject IPs into policy YAML
         run: |
           sed -i "s|\\\$HOME_IP|${{ secrets.HOME_IP }}|g" policies/us-west-2/rules.yaml
+          sed -i "s|\\\$ALTERNATE_SOURCE|${{ secrets.ALTERNATE_SOURCE }}|g" policies/us-west-2/rules.yaml
           IP=$(curl -s ifconfig.me)
           echo "Runner public IP: $IP"
           aws ec2 authorize-security-group-ingress \
