--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -19,15 +19,26 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Extract Region from Issue YAML
+        id: region
+        run: |
+          ISSUE_BODY=$(jq -r '.issue.body' "$GITHUB_EVENT_PATH")
+          REGION=$(echo "$ISSUE_BODY" | grep -m1 'region:' | awk 'NF{print $2}')
+          if [ -z "$REGION" ]; then
+            echo "❌ Region not found in issue. Failing."
+            exit 1
+          fi
+          echo "region=$REGION" >> "$GITHUB_OUTPUT"
+
       - name: Parse Labels and Set Target File
         id: filepath
         run: |
           LABELS=$(jq -r '.issue.labels[].name' "$GITHUB_EVENT_PATH")
 
           if echo "$LABELS" | grep -q 'sg-request'; then
-            echo "target_file=infrastructure/policies/us-west-2/sgs.yaml" >> $GITHUB_OUTPUT
+            echo "target_file=infrastructure/policies/${{ steps.region.outputs.region }}/sgs.yaml" >> $GITHUB_OUTPUT
           elif echo "$LABELS" | grep -q 'access-request'; then
-            echo "target_file=infrastructure/policies/us-west-2/rules.yaml" >> $GITHUB_OUTPUT
+            echo "target_file=infrastructure/policies/${{ steps.region.outputs.region }}/rules.yaml" >> $GITHUB_OUTPUT
           else
             echo "❌ No recognized label found on issue. Exiting."
             exit 1
@@ -40,7 +51,8 @@ jobs:
           ISSUE_NUMBER=$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")
 
           if [ ! -f "$FILE" ]; then
-            echo "❌ ERROR: Expected file '$FILE' not found. Check repo structure or checkout path."
+            echo "❌ ERROR: Expected file '$FILE' not found for region '${{ steps.region.outputs.region }}'."
+            echo "This may be due to unsupported region or cross-region mismatch. Exiting."
             exit 1
           fi
 
