--- a/infrastructure/policies/us-west-2/rules.yaml
+++ b/infrastructure/policies/us-west-2/rules.yaml
@@ -1,6 +1,4 @@
-request_id: req-20240428-xyz
-submitted_by: jeffreywoods@example.com
-submitted_at: 2024-04-28T14:00:00Z
+request_id: "req-20240428-xyz"
 
 overall_business_justification: >
   Enable management connectivity for testing palo alto providers. 
