--- a/infrastructure/policies/us-west-2/rules.yaml
+++ b/infrastructure/policies/us-west-2/rules.yaml
@@ -1,130 +1,122 @@
 request_id: "req-20240428-xyz"
 
 overall_business_justification: >
-  Enable management connectivity for testing palo alto providers. 
+  "Enable management connectivity for testing palo alto providers."
 
 requests:
   - business_justification: >
-      Allow UI access from home. 
+      "Allow UI access from home."
     source:
       account_id: 
       vpc_id: 
       region: 
-      security_group_ids:
-      ips: [$HOME_IP]
+      security_group_id:
+      ips: "[$HOME_IP]"
     destination:
-      account_id: $TEST_ACCOUNT
-      vpc_id: $TEST_VPC
+      account_id: "$TEST_ACCOUNT"
+      vpc_id: "$TEST_VPC"
       region: "us-west-2"
-      security_group_ids:
-      - sg-0b5d6e2811145808d
+      security_group_id: "sg-0b5d6e2811145808d"
       ips: []
-    protocol: tcp
-    port: 443
-    appid: ssl
+    protocol: "tcp"
+    port: "443"
+    appid: "ssl"
     url:  
 
   - business_justification: >
-      Allow SSH access from home. 
+      "Allow SSH access from home." 
     source:
       account_id: 
       vpc_id: 
       region: 
-      security_group_ids:
-      ips: [$HOME_IP]
+      security_group_id:
+      ips: "[$HOME_IP]"
     destination:
-      account_id: $TEST_ACCOUNT
-      vpc_id: $TEST_VPC
+      account_id: "$TEST_ACCOUNT"
+      vpc_id: "$TEST_VPC"
       region: "us-west-2"
-      security_group_ids:
-      - sg-0b5d6e2811145808d
+      security_group_id: "sg-0b5d6e2811145808d"
       ips: []
-    protocol: tcp
-    port: 22
-    appid: ssl
+    protocol: "tcp"
+    port: "22"
+    appid: "ssl"
     url:  
 
   - business_justification: >
-      Allow ICMP access from home. 
+      "Allow ICMP access from home. ""
     source:
       account_id: 
       vpc_id: 
       region: 
-      security_group_ids:
-      ips: [$HOME_IP]
+      security_group_id:
+      ips: "[$HOME_IP]"
     destination:
-      account_id: $TEST_ACCOUNT
-      vpc_id: $TEST_VPC
+      account_id: "$TEST_ACCOUNT"
+      vpc_id: "$TEST_VPC"
       region: "us-west-2"
-      security_group_ids:
-      - sg-0b5d6e2811145808d
+      security_group_id: "sg-0b5d6e2811145808d"
       ips: []
-    protocol: any
-    port: any
-    appid: ssl
+    protocol: "any"
+    port: "any"
+    appid: "ssl"
     url:  
 
   - business_justification: >
-      Allow egress access from palo. 
+      "Allow egress access from palo."
     source:
-      account_id: $TEST_ACCOUNT
-      vpc_id: $TEST_VPC
+      account_id: "$TEST_ACCOUNT"
+      vpc_id: "$TEST_VPC"
       region: "us-west-2"
-      security_group_ids:
-      - sg-0b5d6e2811145808d
+      security_group_id: "sg-0b5d6e2811145808d"
       ips: []
     destination:
       account_id: 
       vpc_id: 
       region: 
-      security_group_ids:
+      security_group_id:
       ips: ["0.0.0.0/0"]
-    protocol: any
-    port: any
-    appid: ssl
+    protocol: "any"
+    port: "any"
+    appid: "ssl"
     url:  
   
   - business_justification: >
-      EC2 instance needs HTTPS access to thirdparty endpoint.
+      "EC2 instance needs HTTPS access to thirdparty endpoint."
     source:
       account_id: 
       vpc_id: 
       region: 
-      security_group_ids:
-        - "sg-0b7029dc87dbcb848"
+      security_group_id:v "sg-0b7029dc87dbcb848"
       ips: ["192.168.1.18/32"]
     destination:
       account_id: 
       vpc_id: 
       region: 
-      security_group_ids:
-        - "sg-01057cb19af0373d7"
+      security_group_id: "sg-01057cb19af0373d7"
       ips: ["100.64.0.198/32"]
     protocol: tcp
-    port: 443
-    appid: ssl
-    url_category: api.datadoghq.com
-    thirdPartyID: 123456
-    thirdPartyName: DataDog
-    enable_palo_inspection: true
+    port: "443"
+    appid: "ssl"
+    url_category: "api.datadoghq.com"
+    thirdPartyID: "123456"
+    thirdPartyName: "DataDog"
+    enable_palo_inspection: "true"
 
   - business_justification: >
-      EC2 needs to connect to aws service vpc-endpoints via PrivateLink.
+      "EC2 needs to connect to aws service vpc-endpoints via PrivateLink."
     source:
       account_id: 
       vpc_id: 
       region: 
-      security_group_ids:
-        - "sg-0b7029dc87dbcb848"
+      security_group_id: "sg-0b7029dc87dbcb848"
       ips: []
     destination:
       account_id:
       vpc_id: 
       region:
-      security_group_ids:
-        - "sg-0dfca87f31291ec64"
+      security_group_id: "sg-0dfca87f31291ec64"
       ips: []
-    protocol: tcp
-    port: 443
-    appid: ssl
-    host: ec2.us-west-2.amazonaws.com
+    protocol: "tcp"
+    port: "443"
+    appid: "ssl"
+    host: "ec2.us-west-2.amazonaws.com"
