--- a/infrastructure/policies/us-west-2/rules.yaml
+++ b/infrastructure/policies/us-west-2/rules.yaml
@@ -7,9 +7,9 @@ requests:
   - business_justification: >
       "Allow UI access from home."
     source:
-      account_id: 
-      vpc_id: 
-      region: 
+      account_id: ""
+      vpc_id: ""
+      region: ""
       security_group_id:
       ips: "[$HOME_IP]"
     destination:
@@ -21,15 +21,15 @@ requests:
     protocol: "tcp"
     port: "443"
     appid: "ssl"
-    url:  
+    url:  ""
 
   - business_justification: >
       "Allow SSH access from home." 
     source:
-      account_id: 
-      vpc_id: 
-      region: 
-      security_group_id:
+      account_id: ""
+      vpc_id: ""
+      region: ""
+      security_group_id: ""
       ips: "[$HOME_IP]"
     destination:
       account_id: "$TEST_ACCOUNT"
@@ -40,14 +40,14 @@ requests:
     protocol: "tcp"
     port: "22"
     appid: "ssl"
-    url:  
+    url: ""
 
   - business_justification: >
       "Allow ICMP access from home. ""
     source:
-      account_id: 
-      vpc_id: 
-      region: 
+      account_id: ""
+      vpc_id: ""
+      region: ""
       security_group_id:
       ips: "[$HOME_IP]"
     destination:
@@ -59,7 +59,7 @@ requests:
     protocol: "any"
     port: "any"
     appid: "ssl"
-    url:  
+    url:  ""
 
   - business_justification: >
       "Allow egress access from palo."
@@ -70,28 +70,28 @@ requests:
       security_group_id: "sg-0b5d6e2811145808d"
       ips: []
     destination:
-      account_id: 
-      vpc_id: 
-      region: 
-      security_group_id:
+      account_id: ""
+      vpc_id: ""
+      region: ""
+      security_group_id: ""
       ips: ["0.0.0.0/0"]
     protocol: "any"
     port: "any"
     appid: "ssl"
-    url:  
+    url:  ""
   
   - business_justification: >
       "EC2 instance needs HTTPS access to thirdparty endpoint."
     source:
-      account_id: 
-      vpc_id: 
-      region: 
+      account_id: ""
+      vpc_id: ""
+      region: ""
       security_group_id: "sg-0b7029dc87dbcb848"
       ips: ["192.168.1.18/32"]
     destination:
-      account_id: 
-      vpc_id: 
-      region: 
+      account_id: ""
+      vpc_id: ""
+      region: ""
       security_group_id: "sg-01057cb19af0373d7"
       ips: ["100.64.0.198/32"]
     protocol: tcp
@@ -105,15 +105,15 @@ requests:
   - business_justification: >
       "EC2 needs to connect to aws service vpc-endpoints via PrivateLink."
     source:
-      account_id: 
-      vpc_id: 
-      region: 
+      account_id: ""
+      vpc_id: ""
+      region: ""
       security_group_id: "sg-0b7029dc87dbcb848"
       ips: []
     destination:
-      account_id:
-      vpc_id: 
-      region:
+      account_id: ""
+      vpc_id: ""
+      region: ""
       security_group_id: "sg-0dfca87f31291ec64"
       ips: []
     protocol: "tcp"
