--- a/infrastructure/policies/us-west-2/sgs.yaml
+++ b/infrastructure/policies/us-west-2/sgs.yaml
@@ -6,15 +6,15 @@ overall_business_justification: >
 requests:
   - business_justification: >
       "Create security-group for datadog privatelink in us-west-2"
-    thirdpartyName: "Datadog"
-    thirdpartyId: "1234567"
-    accountId: "6666666"
-    vpcId: "vpc-0c9a555406867d5da"
-    region: "us-west-2"
+    thirdpartyName: Datadog
+    thirdpartyId: 1234567
+    accountId: 6666666
+    vpcId: vpc-0c9a555406867d5da
+    region: us-west-2
   - business_justification: >
       "Create security-group for mongoDB privatelink in us-west-2"
-    thirdpartyName: "MongoDB"
-    thirdpartyId: "456748"
-    accountId: "6666666"
-    vpcId: "vpc-0c9a555406867d5da"
-    region: "us-west-2"
+    thirdpartyName: MongoDB
+    thirdpartyId: 456748
+    accountId: 6666666
+    vpcId: vpc-0c9a555406867d5da
+    region: us-west-2
